--- a/Practices/编程题/test.html
+++ b/Practices/编程题/test.html
@@ -2,30 +2,23 @@
  * @Description: 
  * @Autor: ycc
  * @Date: 2022-04-24 09:38:58
- * @LastEditTime: 2022-04-24 12:00:38
+ * @LastEditTime: 2022-04-25 21:48:19
 -->
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+    <!-- <script src="./deepClone.js"></script>
+    <script src="./add.js"></script> -->
+  </head>
 
-<body>
-    <script>
-        getType = (value) => {
-            const s = Object.prototype.toString.call(value);
-            // 取出最后的类型
-            return s.replace(/^.+\s/, '').replace(']', '');
-        };
-        console.log(getType());
-
-
-
+  <body>
+    <script type="module">
+      // import './大数相加.js';
+      import './千分位分隔符.js';
     </script>
-</body>
-
+  </body>
 </html>
